--- a/views/events/channel.channel_points_custom_reward_redemption.add-tts.ejs
+++ b/views/events/channel.channel_points_custom_reward_redemption.add-tts.ejs
@@ -1,10 +1,13 @@
 
-<p class="text-white font-bold text-5xl drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] text-center">
-    <%= name %>
-</p>
-<p class="text-white font-bold text-5xl drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] text-center">
-    <%= msg %>
-</p>
+<div class="mx-auto max-w-[50%] mt-5">dasd
+    <p class="mb-3 text-white font-bold text-5xl drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] text-center">
+        <%= name %>
+    </p>
+    <p class="text-white font-bold text-3xl drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] text-center">
+        <%= msg %>
+    </p>
+</div>
+
 <audio autoplay>
     <source src="<%= tts %>" type="audio/wav">
 </audio>
