Added reconnect and fixed some bugs

--- a/views/events/channel.channel_points_custom_reward_redemption.add-tts.ejs
+++ b/views/events/channel.channel_points_custom_reward_redemption.add-tts.ejs
@@ -1,5 +1,5 @@
 
-<div class="mx-auto max-w-[50%] mt-5">dasd
+<div class="mx-auto max-w-[50%] mt-5">
     <p class="mb-3 text-white font-bold text-5xl drop-shadow-[0_1.2px_1.2px_rgba(0,0,0,0.8)] text-center">
         <%= name %>
     </p>
